--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -16,6 +16,9 @@
   &:hover {
     filter: brightness(.9);
   }
+  &:focus {
+    box-shadow: 0 0 2px 2px #DFE5EC;
+  }
 }
 .border-radius--none {
   border-radius: 0;
@@ -25,6 +28,9 @@
   background: #2196F3;
   color: #FFF;
   border: 1px solid transparent;
+  &:focus {
+    box-shadow: 0 0 2px 2px #91CAFF;
+  }
 }
 .border-left {
   border-radius: 10px 0 0 10px;
